rust_minidump_writer_linux and Breakpad disagree on the alignment of the context structure on Android/AArch64
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox129 | --- | fixed |
People
(Reporter: gsvelto, Assigned: gsvelto)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
I noticed this issue by using debug builds w/ recent versions of the Rust compiler. copy_nonoverlapping()
now checks if the source and destination pointers have the same alignment constraints, and this causes crash tests to fail with an assertion because Breakpad only aligns that structure to 8 bytes instead of the 16 that Rust expects. That's unsurprising because Breakpad declares the context as a char array without any specific alignment requirements. Setting the proper alignment should be sufficient to solve this issue.
Assignee | ||
Comment 1•5 months ago
|
||
Also replace core::ptr::* uses with the std::ptr::* equivalents.
Updated•5 months ago
|
Comment 3•5 months ago
|
||
Backed out for causing build bustages with rust_minidump_writer_linux
- Backout link
- Push with failures
- Failure Log
- Failure line: error[E0658]: use of unstable library feature 'offset_of'
error: could not compilerust_minidump_writer_linux
(lib) due to 4 previous errors
gmake[4]: *** [/builds/worker/checkouts/gecko/config/makefiles/rust.mk:498: force-cargo-library-build] Error 101
Assignee | ||
Updated•5 months ago
|
Assignee | ||
Comment 4•5 months ago
|
||
Try run with a fix which should work: https://treeherder.mozilla.org/jobs?repo=try&revision=8319da0e2bf6abe4b3b3c3e791bc6b3e83e022b1
Comment 6•5 months ago
|
||
bugherder |
Description
•