Bug 1903583 - Enforce the same alignment for the crash context across C++ and Rust r=afranchuk

Also replace core::ptr::* uses with the std::ptr::* equivalents.

Differential Revision: https://phabricator.services.mozilla.com/D214273