toolkit/crashreporter/rust_minidump_writer_linux/src/lib.rs
@@ -7,9 +7,9 @@ use libc::pid_t;
 use minidump_writer::crash_context::CrashContext;
 use minidump_writer::minidump_writer::MinidumpWriter;
 use std::ffi::{CStr, CString};
-use std::mem::{self, MaybeUninit};
+use std::mem::{self, offset_of, MaybeUninit};
 use std::os::raw::c_char;
-use std::ptr::null_mut;
+use std::ptr::{copy_nonoverlapping, null_mut};
 
 // This function will be exposed to C++
 #[no_mangle]
@@ -86,15 +86,28 @@ pub unsafe extern "C" fn write_minidump_linux_with_context(
     let c_path = CStr::from_ptr(dump_path);
 
     let mut crash_context: MaybeUninit<crash_context::CrashContext> = mem::MaybeUninit::zeroed();
-    let cc = &mut *crash_context.as_mut_ptr();
+    let cc = crash_context.as_mut_ptr();
 
-    core::ptr::copy_nonoverlapping(siginfo, &mut cc.siginfo, 1);
-    core::ptr::copy_nonoverlapping(ucontext, &mut cc.context, 1);
+    copy_nonoverlapping(
+        ucontext,
+        cc.byte_add(offset_of!(crash_context::CrashContext, context)) as *mut _,
+        1,
+    );
     #[cfg(not(target_arch = "arm"))]
-    core::ptr::copy_nonoverlapping(float_state, &mut cc.float_state, 1);
+    copy_nonoverlapping(
+        float_state,
+        cc.byte_add(offset_of!(crash_context::CrashContext, float_state)) as *mut _,
+        1,
+    );
+    copy_nonoverlapping(
+        siginfo,
+        cc.byte_add(offset_of!(crash_context::CrashContext, siginfo)) as *mut _,
+        1,
+    );
 
-    cc.pid = child;
-    cc.tid = child_thread;
+    (*cc).pid = child;
+    (*cc).tid = child_thread;
+
     let crash_context = crash_context.assume_init();
     let crash_context = CrashContext {
         inner: crash_context,
